# agent_ai_publisher

./: .env  .env.example  README.md  docker-compose.yml
backend/: README.md  pyproject.toml
backend/.vendor/charset_normalizer-3.4.7.dist-info/: RECORD
backend/.vendor/httpx-0.28.1.dist-info/: RECORD
backend/.vendor/jsonpatch-1.33.dist-info/: RECORD
backend/.vendor/jsonpointer-3.1.1.dist-info/: RECORD
backend/.vendor/jsonschema-4.26.0.dist-info/: RECORD
backend/.vendor/mcp/: __init__.py
backend/.vendor/mcp-1.27.0.dist-info/: RECORD
backend/.vendor/python_dotenv-1.2.2.dist-info/: RECORD
backend/.vendor/pywin32-311.dist-info/: RECORD
backend/.vendor/uvicorn-0.44.0.dist-info/: RECORD
backend/app/: main.py
backend/app/api/: deps.py
backend/app/auth/: dependencies.py  service.py
backend/app/cli/: main.py
backend/app/core/: config.py  security.py
backend/app/db/: init_db.py  models.py  session.py
backend/app/knowledge/: splitter.py  vector_store.py
backend/app/mcp/: __init__.py  bootstrap.py  runtime.py
backend/app/schemas/: auth.py  chat.py  conversation.py  decision_log.py  knowledge.py  memory.py  project.py
backend/app/services/: chat.py  conversation.py  decision.py  faithfulness.py  image_ocr.py  knowledge.py  memory.py  project.py  providers.py  rerank.py
backend/data/: app.db  test_app.db
backend/publisher_ai_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_api.py  test_auth.py  test_calculator.py  test_faithfulness.py  test_mcp_runtime.py  test_memory.py
data/: app.db
(+43 files in other folders)
